tests/output/self_hosted/no_member_error.txt
tests/no_member_error.oomph:2: error: type Str has no member named lolz

    print("hello".lolz)
                 ^^^^^

